<resources>
    <string name="app_name">Coffeestand</string>
    <string name="example_name">Kopi Ruang Hati</string>
    <string name="example_alamat">Jl. Sultan Fatah No.1, Bogorame, Bintoro, Kec. Demak, Kabupaten Demak, Jawa Tengah 59515</string>
    <string name="example_rating">Rating : %s</string>
    <string name="example_time">19:30 - 00:00</string>
    <string name="example_opem">Open Everyday</string>
    <string name="my_email">zulhamlanz@gmail.com</string>
    <string name="my_name">Zulham Dahlan</string>
    <string name="about">About</string>
</resources>